=========================== 2.17.90 ============================

2007-01-22  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update.
	* libgnomeui/0ChangeLog.2003: Rename ChangeLog to this to
	avoid prepare-ChangeLog.pl putting changelog entries in the wrong
	file.

2007-01-21  Chris Wilson <chris@chris-wilson.co.uk>

	Bug 398357 – Does not include $(X_CFLAGS)

	X_CFLAGS are used for testing the presence of libSM during
	configure, but not whilst building. This results in a build
	failure under a hosted environment.

	* configure.in:
		Fix the asymmetry and the X_CFLAGS to LIBGNOMEUI_CFLAGS.

2007-01-15  Kjartan Maraas  <kmaraas@gnome.org>

        * gnome-thumbnail.c: (gnome_thumbnail_factory_finalize),
	  (gnome_thumbnail_factory_instance_init): Fix GMutex leak.
	  Patch from Jens Granseuer. Closes bug #396075.

2007-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* demos/animator_demo.c: (main):
	* demos/mdi_demo.c: (main):
	* demos/test-file-saver.c: (main):
	* demos/test-recently-used.c: (main):
	* test-gnome/testentry.c: (main):
	* test-gnome/testiconlist.c: (main):
	* tests/test-libglade-gnome-noupgrade.c: (main):
	Fix leaks of GnomeProgram.

2007-01-12  Christian Persch  <chpe@svn.gnome.org>

	* libgnomeui/gnome-app-util.h: Fix deprecations. Bug #395582.

2007-01-11  Kjartan Maraas  <kmaraas@gnome.org>

	* file-chooser/gtkfilesystemgnomevfs.c:
	(gtk_file_system_gnome_vfs_parse):
	Make a single tilde '~' go to $HOME in the location entry.
	Patch by Yevgen Muntyan. Closes part of bug #334168.

2007-01-10  Christian Persch  <chpe@svn.gnome.org>

	* libgnomeui/gnome-password-dialog.c: (add_row),
	(gnome_password_dialog_init), (gnome_password_dialog_class_init),
	(gnome_password_dialog_set_show_remember),
	(gnome_password_dialog_set_remember),
	(gnome_password_dialog_get_remember): Change remember checkbuttons to
	radio buttons. Bug #322804, based on a patch by Fernando Herrera based
	on a patch by Hiroyuki Ikezoe.

2007-01-09  Kjartan Maraas  <kmaraas@gnome.org>
